openshift/kustomize/kubeinvaders-dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: kubeinvaders
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    name: kubeinvaders
  strategy:
    activeDeadlineSeconds: 21600
    recreateParams:
      timeoutSeconds: 600
    type: Recreate
  template:
    metadata:
      labels:
        name: kubeinvaders
    spec:
      containers:
      - env:
        - name: ROUTE_HOST
          value: kubeinvaders_route_host
        - name: NAMESPACE
          value: target_namespaces
        - name: UPDATETIME
          value: "0.5"
        - name: ALIENPROXIMITY
          value: "15"
        - name: HITSLIMIT
          value: "0"
        image: quay.io/pittar/kubeinvaders:latest
        imagePullPolicy: Always
        name: kubeinvaders
        ports:
        - containerPort: 8080
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      serviceAccount: kubeinvaders
      serviceAccountName: kubeinvaders
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - type: ConfigChange
