openshift/kustomize/kubeinvaders-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kubeinvaders
spec:
  host: kubeinvaders_route_host
  tls:
    termination: edge
  to:
    kind: Service
    name: kubeinvaders
    weight: 100
  wildcardPolicy: None
